Fixes menu display on mobile and adds readme

--- a/css/_header.scss
+++ b/css/_header.scss
@@ -10,6 +10,9 @@
 		}
 	}
 }
+.main-menu-wrap li:nth-child(odd) {
+    background: $white;
+}
 .header.unit  {
 	/*svg {
 		fill: currentColor;
